Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-31759

Indentation using the tab key is not working properly

XMLWordPrintable

    • Windows
    • 933bb6b18 (master)

      Indentation using the Tab key is not working properly.

      In the attached video, at 00:11, when clicking the Tab key, the } remains in column one.

        For Gerrit Dashboard: QTCREATORBUG-31759
        # Subject Branch Project Status CR V

            kandeler Christian Kandeler
            mahdi.belila Mehdi Belila
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes