CppEditor: Fix restoring indentation after braced initialization

Fixes: QTCREATORBUG-31759
Change-Id: I81c11e70f867b7019d4a050d079a57d7c1b66787
Reviewed-by: David Schulz <david.schulz@qt.io>